--- a/loader/wine.inf.in
+++ b/loader/wine.inf.in
@@ -360,6 +360,7 @@ HKLM,System\CurrentControlSet\Control\Class\{745a17a0-74d3-11d0-b6fe-00a0c90f57d
 
 [CurrentVersion]
 HKCU,%CurrentVersion%\Explorer\Advanced,,16
+HKCU,%CurrentVersion%\Explorer\FileExts,,16
 HKCU,%CurrentVersion%\Run,,16
 HKCU,%CurrentVersionNT%\Winlogon,,16
 HKLM,%CurrentVersion%,"CommonFilesDir",,"%16427%"
