tools: Move the loader man pages to the new Wine loader directory.
And remove mention of the WINELOADER variable.

--- a/tools/wine/Makefile.in
+++ b/tools/wine/Makefile.in
@@ -1,7 +1,11 @@
 PROGRAMS = wine
 
 SOURCES = \
-	wine.c
+	wine.c \
+	wine.de.UTF-8.man.in \
+	wine.fr.UTF-8.man.in \
+	wine.man.in \
+	wine.pl.UTF-8.man.in
 
 wine_EXTRADEFS = -DBINDIR="\"${bindir}\"" -DLIBDIR="\"${libdir}\""
 
